# server/src/validators/user.js
@@ -13,11 +13,13 @@ const complexityOptions = {
 
 module.exports = function validateUser(user) {
   const schema = Joi.object({
-    username: Joi.string().alphanum().min(5).max(15).required(),
+    userName: Joi.string().alphanum().min(5).max(15).required(),
     email: Joi.string().min(5).max(255).required().email(),
     password: passwordComplexity(complexityOptions).required(),
-    isVerified: Joi.boolean(),
     confirmPassword: Joi.string().required(),
+    fullName: Joi.string().min(5).max(100).allow(null, ""),
+    content: Joi.string().allow(null, ""),
+    img: Joi.allow(null, ""),
   });
   return schema.validate(user);
 };
